--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Config\\": "config/"
+            "Config\\": "config/",
+            "System\\": "system"
         }
     },
     "config": {
