--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "psr-4": {
             "App\\": "app/",
             "Config\\": "config/",
-            "System\\": "system"
+            "System\\": "system/"
         }
     },
     "config": {
