--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,18 @@
         }
     ],
     "require": {
-        "mmucklo/krumo": "^0.5.7"
-    },
-        "require-dev": {
-        "squizlabs/php_codesniffer": "2.*"
+        "mmucklo/krumo": "^0.5.7",
+        "squizlabs/php_codesniffer": "2.*",
+        "illuminate/database": "5.2.*",
+        "robmorgan/phinx": "0.5.*"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Config\\": "config/",
             "System\\": "system/"
-        }
+        },
+        "files": [ "config/config.php" ]
     },
     "config": {
             "optimize-autoloader": true
