--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     "require": {
         "mmucklo/krumo": "^0.5.7",
         "squizlabs/php_codesniffer": "2.*",
-        "illuminate/database": "5.2.*",
         "robmorgan/phinx": "0.5.*"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Config\\": "config/",
-            "System\\": "system/"
+            "System\\": "system/",
+            "Migrations\\": "migrations/"
         },
         "files": [ "config/config.php" ]
     },
