--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "mmucklo/krumo": "^0.5.7",
         "squizlabs/php_codesniffer": "2.*",
-        "robmorgan/phinx": "0.5.*"
+        "fzaninotto/faker": "^1.6",
+        "robmorgan/phinx": "^0.6.5"
     },
     "autoload": {
         "psr-4": {
