en el archivo composer.json se modifico la parte de autoload -FILES- a la ruta /config/define/execute.php y en el archivo -db/config-phinx- se modifico el -require- para que usara el -vendor/autoload.php- ya que alli tiene ya cargadas las variables define()

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
             "System\\": "system/",
             "Migrations\\": "migrations/"
         },
-        "files": [ "config/config.php" ]
+        "files": [ "config/define/execute.php" ]
     },
     "config": {
             "optimize-autoloader": true
