--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "mmucklo/krumo": "^0.5.7",
         "squizlabs/php_codesniffer": "2.*",
         "fzaninotto/faker": "^1.6",
-        "robmorgan/phinx": "^0.6.5"
+        "robmorgan/phinx": "^0.6.5",
+        "doctrine/orm": "*"
     },
     "autoload": {
         "psr-4": {
