se agrego la libreria vlucas/phpdotenv la cual permite que se puedan generar variables de entorno con el archivo -.env- ubicado en la carpeta raiz

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,13 @@
-.env.example
+ENV_BASE_URL= Url Base del Sistema
+ENV_CLASE_DEFAULT= Ruta de la Clase Default
+ENV_METODO_DEFAULT= Metodo Default
+
+ENV_DB_ADAPTER= Define el tipo de Driver Universal a usar ejemplo: Mysql, SQLite
+ENV_DB_ADAPTER_PHINX= Adaptador para las migraciones PHINX
+ENV_DB_ADAPTER_DOCTRINE= Adaptador para el ORM  DOCTRINE
+ENV_DB_HOST= El nombre del host ejemplo: www.gobmvc.com.ve, localhost
+ENV_DB_PORT= Puerto del motor SQL
+ENV_DB_DATABASE= El nombre del host ejemplo: www.gobmvc.com.ve, localhost 
+ENV_DB_USERNAME= Nombre de Usario
+ENV_DB_PASSWORD= Clave del motor SQL
+
