se agrego als validaciones y se creo nuevos folders en -system- -core, database, template- la cual dara a un orden y mas control de las cosas a futuro cuando se quiera agregar mas funcionalidades internas al framework

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "robmorgan/phinx": "^0.6.5",
         "doctrine/orm": "*",
         "vlucas/phpdotenv": "^2.4",
-        "phpdocumentor/phpdocumentor": "^2.9"
+        "phpdocumentor/phpdocumentor": "^2.9",
+        "particle/validator": "^2.2"
     },
     "autoload": {
         "psr-4": {
