Agregado el ORM IDIORM

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "doctrine/orm": "*",
         "vlucas/phpdotenv": "^2.4",
         "phpdocumentor/phpdocumentor": "^2.9",
-        "particle/validator": "^2.2"
+        "particle/validator": "^2.2",
+        "league/container": "^2.2"
     },
     "autoload": {
         "psr-4": {
