--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "vlucas/phpdotenv": "^2.4",
         "phpdocumentor/phpdocumentor": "^2.9",
         "particle/validator": "^2.2",
-        "league/container": "^2.2"
+        "league/container": "^2.2",
+        "illuminate/support": "*"
     },
     "autoload": {
         "psr-4": {
