--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "phpdocumentor/phpdocumentor": "^2.9",
         "particle/validator": "^2.2",
         "league/container": "^2.2",
-        "illuminate/support": "*"
+        "illuminate/support": "5.0"
     },
     "autoload": {
         "psr-4": {
