--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "phpdocumentor/phpdocumentor": "^2.9",
         "particle/validator": "^2.2",
         "league/container": "^2.2",
-        "illuminate/support": "5.0"
+        "fuelphp/alias": "^2.0",
+        "typo3/class-alias-loader": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -30,5 +31,11 @@
     },
     "config": {
             "optimize-autoloader": true
+    },
+    "extra": {
+        "typo3/class-alias-loader": {
+            "always-add-alias-loader": true,
+            "class-alias-maps": ["config/alias.php"]
+        }
     }
 }
