--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "particle/validator": "^2.2",
         "league/container": "^2.2",
         "fuelphp/alias": "^2.0",
-        "typo3/class-alias-loader": "^1.0"
+        "typo3/class-alias-loader": "^1.0",
+        "rcastera/session": "v1.0.0"
     },
     "autoload": {
         "psr-4": {
