--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ENV_BASE_URL=http://localhost/ODA/
-ENV_CLASE_DEFAULT=App\login\controllers\Test
+ENV_CLASE_DEFAULT=App\login\controllers\Principal
 ENV_METODO_DEFAULT=index
 
 ENV_DB_ADAPTER=mysql
