--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: php
 php:
 - 5.6
 - 5.5
-script: sudo ./cli/config/install.sh
+script: 
+- sudo ./cli/config/install.sh
+- bin/atoum --test-all
