--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ RewriteEngine On
 
 #Checks to see if the user is attempting to access a valid file,
 #such as an image or css document, if this isn't true it sends theeeeeeee
-#request to index.php
+#request to index.phpp
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 #This last condition enables access to the images and css folders, and the robots.txt file
