--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine On
 
 #Checks to see if the user is attempting to access a valid file,
-#such as an image or css document, if this isn't true it sends the
+#such as an image or css document, if this isn't true it sends theeee
 #request to index.phppp
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
