--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ language: php
 php:
 - 5.6
 - 7.1
+before_script:
+  - composer install
+
 script: 
-- sudo ./cli/config/install.sh
-- sudo ./cli/cli.sh
+  - sudo ./cli/config/install.sh
+  - sudo ./cli/cli.sh
+  - mkdir -p build/logs 
+  - phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - php vendor/bin/coveralls -v
