se coloco la verificacion de token de forma obligatorio en el index.php para los POST, y se agrego el index original en la carpeta system, se agrego un metodo ene l Token el cual agrega un input con el ID y el VALUE

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "phpdocumentor/phpdocumentor": "^2.9",
         "particle/validator": "^2.2",
         "typo3/class-alias-loader": "^1.0",
-        "rcastera/session": "v1.0.0"
+        "rcastera/session": "v1.0.0",
+        "filp/whoops": "^2.1"
     },
     "autoload": {
         "psr-4": {
