--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+ENV_ENVIRONMENT=local
 ENV_BASE_URL=http://localhost/ODA/
 ENV_CLASE_DEFAULT=App\login\controllers\Principal
 ENV_METODO_DEFAULT=index
