cambiando el composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "carlosh1989/ODA",
+    "name": "carlosh1989/oda",
     "description": "framework de la ODA",
     "version": "1.0.0",
     "license": "MIT",
