Agregado la paginacion normal y la de scroll y se agrego los comandos nuevos en -system/tools/render/array.php -

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "typo3/class-alias-loader": "^1.0",
         "rcastera/session": "v1.0.0",
         "filp/whoops": "^2.1",
-        "illuminate/database": "5.1.8"
+        "illuminate/database": "5.1.8",
+        "usmanhalalit/strana": "1.*@dev"
     },
     "autoload": {
         "psr-4": {
