--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "rcastera/session": "v1.0.0",
         "filp/whoops": "^2.1",
         "illuminate/database": "5.1.8",
-        "usmanhalalit/strana": "1.*@dev"
+        "usmanhalalit/strana": "1.*@dev",
+        "railto/flash-messages": "1.0.*"
     },
     "autoload": {
         "psr-4": {
