--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ ENV_DB_HOST=localhost
 ENV_DB_PORT=3306
 ENV_DB_DATABASE=frame
 ENV_DB_USERNAME=root
-ENV_DB_PASSWORD=123
+ENV_DB_PASSWORD=Adm15.
 
