agregando el menu para el composer insterno del framework

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ENV_ENVIRONMENT=local
-ENV_BASE_URL=http://localhost/laboratorio/
+ENV_BASE_URL=http://localhost/ODA/
 ENV_CLASE_DEFAULT=App\login\controllers\Principal
 ENV_METODO_DEFAULT=index
 
