--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ ENV_DB_ADAPTER_PHINX=mysql
 ENV_DB_ADAPTER_DOCTRINE=pdo_mysql
 ENV_DB_HOST=localhost
 ENV_DB_PORT=3306
-ENV_DB_DATABASE=laboratorio
+ENV_DB_DATABASE=ODA
 ENV_DB_USERNAME=root
-ENV_DB_PASSWORD=Adm15.
+ENV_DB_PASSWORD=123
 
