--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 ENV_ENVIRONMENT=local
 ENV_BASE_URL=http://localhost/ODA/
-ENV_CLASE_DEFAULT=App\login\controllers\Principal
+ENV_CLASE_DEFAULT=App\auth\controllers\Login
 ENV_METODO_DEFAULT=index
-
 ENV_DB_ADAPTER=mysql
 ENV_DB_ADAPTER_PHINX=mysql
 ENV_DB_ADAPTER_DOCTRINE=pdo_mysql
