--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
         "jasny-bootstrap": "*",
         "sweetalert2": "*",
         "bootstrap-theme-paper": "3.3.7",
-        "bootstrap-table": "*"
+        "bootstrap-table": "*",
+        "bootstrap": "*"
     }
 }
