creado el gejnerador de home

--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ ENV_DB_ADAPTER_PHINX=mysql
 ENV_DB_ADAPTER_DOCTRINE=pdo_mysql
 ENV_DB_HOST=localhost
 ENV_DB_PORT=3306
-ENV_DB_DATABASE=root
-ENV_DB_USERNAME=Adm15.
-ENV_DB_PASSWORD=ODA
+ENV_DB_DATABASE=
+ENV_DB_USERNAME=
+ENV_DB_PASSWORD=
