--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "carlosh1989/oda",
+    "minimum-stability": "dev",
     "description": "framework de la ODA",
     "version": "v1.0.1",
     "license": "MIT",
