--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
         "bootstrap-theme-paper": "3.3.7",
         "bootstrap-table": "*",
         "bootstrap": "*",
-        "inputmask": "*"
+        "inputmask": "*",
+        "bootstrap-checkbox": "*"
     }
 }
