modificaciones de diseño

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
         "bootstrap-table": "*",
         "bootstrap": "*",
         "inputmask": "*",
-        "bootstrap-checkbox": "*"
+        "bootstrap-checkbox": "*",
+        "animate.css": "*"
     }
 }
