restructurado todo el diseño

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,9 @@
         "bootstrap": "*",
         "inputmask": "*",
         "bootstrap-checkbox": "*",
-        "animate.css": "*"
+        "animate.css": "*",
+        "datatables.net": "*",
+        "datatables.net-bs": "*",
+        "EasyAutocomplete": "*"
     }
 }
